apps/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-metrics-service
  labels:
    app: traefik-metrics
  namespace: kube-system
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9100'  # Adjust this port if necessary
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
  - name: metrics
    port: 9100
