apps/traefik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    meta.helm.sh/release-name: traefik
    meta.helm.sh/release-namespace: kube-system
    gethomepage.dev/href: "https://traefik.trusted.nirmalhk7.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Networking
    gethomepage.dev/icon: traefik
    gethomepage.dev/app: traefik # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Traefik
    gethomepage.dev/widget.type: "traefik"
    gethomepage.dev/widget.url: "https://traefik.trusted.nirmalhk7.com"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=traefik"
  labels:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
    milano.app: managed
  name: traefik-dashboard-ingress
  namespace: kube-system
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`traefik.trusted.nirmalhk7.com`)
    services:
    - kind: TraefikService
      name: api@internal
